wip: preserve local migration and config changes